# nfl_bigdata_pipeline

./: .gitignore  README.md  pyproject.toml  setup_env.sh  setup_venv.sh
model_results/: randomforest_results.json
src/nfl_bigdata_pipeline/: __init__.py  assets.py
src/nfl_bigdata_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
