[project]
name = "nfl_bigdata_pipeline"
version = "0.1.0"
description = "Your project description here"
authors = [
    { name = "pkirti33", email = "kirti.p@wustl.edu" }
]
dependencies = [
    "dagster>=1.7.7",
    "dagster-cloud>=1.7.1",
    "pytest>=8.1.1",
    "kaggle>=1.6.11",
    "pandas>=2.0.3",
    "boxsdk>=3.9.2",
    "dagster-webserver>=1.7.1",
    "matplotlib>=3.7.5",
    "datetime>=5.5",
    "scikit-learn>=1.3.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []

[tool.dagster]
module_name = "nfl_bigdata_pipeline"
